<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>xxl</groupId>
    <artifactId>xxlcore</artifactId>
    <version>2.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>XXL</name>
    <description>The eXtensible and fleXible Library XXL for Java</description>
    <url>https://github.com/umr-dbs/xxl</url>
    <licenses>
        <license>
            <name>GNU LGPL</name>
            <url>http://www.gnu.org/licenses/lgpl.html</url>
        </license>
    </licenses>
    
    <inceptionYear>2000</inceptionYear>
    <organization>
    	<name>Prof. Dr. Bernhard Seeger - Head of the Database Research Group - Department of Mathematics and Computer Science - University of Marburg - Germany</name>
    	<url>https://dbs.mathematik.uni-marburg.de</url>
    </organization>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <testSourceDirectory>test</testSourceDirectory>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
            <plugin>
            	<groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-project-info-reports-plugin</artifactId>
	            <version>2.8.1</version>
	        </plugin>
	        <plugin>
	        	<groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-javadoc-plugin</artifactId>
	            <version>2.10.3</version>
	            <configuration>
	            	<author>false</author>
	            	<excludePackageNames>xxl.core.xxql,xxl.core.xxql.*</excludePackageNames>
	            	<additionalparam>-Xdoclint:none</additionalparam>
	            </configuration>
	            <executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
				        </goals>
					</execution>
				</executions>
	        </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.9.10</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
